--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,18 +8,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: node version
-      run: pnpm -v
-
-    - name: Install pnpm 
-      run: npm install pnpm -g
-      
-    - name: pnpm version
-      run: pnpm -v
+    - name: Install Node.js and pnpm
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
 
     - name: Install dependencies
       run: pnpm install
