--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Install Node.js and pnpm
+    - name: Install Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
-        cache: 'pnpm'
+
+    - name: Install pnpm
+      run: npm install -g pnpm
 
     - name: Install dependencies
       run: pnpm install
