--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
       run: pnpm install
 
     - name: Build
-      run: pnpm run build:test
+      run: pnpm run build:test && pnpm run build:main
