--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,12 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
+    - name: Build child_test submodule
+      run: |
+        cd packages/child_test
+        pnpm install
+        pnpm run build
+        mv dist ../
+        
     - name: Build
-      run: pnpm run build:test && pnpm run build:main
+      run: pnpm run build:main
