--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,8 @@ jobs:
         pnpm run build
         mv dist ../
         
-    - name: Build child_main
-      run: |
-        cd packages/child_main
-        pnpm install
-        pnpm run build
+    # - name: Build child_main
+    #   run: |
+    #     cd packages/child_main
+    #     pnpm install
+    #     pnpm run build
