--- a/packages/child_main/package.json
+++ b/packages/child_main/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:main": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
