--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,5 +24,8 @@ jobs:
     - name: Install dependencies
       run: pnpm install
 
+    - name: clone
+      run: git submodule update 
+      
     - name: Build
       run: pnpm build:test
