--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
       run: pnpm install
       
     - name: Build
-      run: git -v && git submodule update && pnpm build:test
+      run: git -v && git submodule update remote && pnpm build:test
