--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
       run: pnpm install
       
     - name: Build
-      run: git -v && git clone https://github.com/listener-dong/child_test.git && cd packages/child_test && ls
+      run: pnpm run build:test
